--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     background-color: burlywood;
 }
 
-.contiener div{
+/* .contiener div{
      width: 200px;
     height: 200px;
     border: 1px solid rgb(4, 0, 0);
@@ -13,7 +13,7 @@
     background-color: rgb(0, 0, 0);
     box-shadow: 3px 3px 50px rgb(18, 168, 195);
 
-}
+} */
 h1{
     display: flex;
     justify-content: center;
@@ -22,11 +22,16 @@ h1{
     margin-top: 50px;
     
 }
-.contiener div:hover{
-    transform: rotate(360deg);
-    transition: 5s;
-    
-}
+.togri{
+    border: solid 2px greenyellow;
+    box-shadow: 3px,4px,20px,3px yellowgreen;
+    -webkit-box-shadow:3px,4px,20px,3px yellowgreen;
+}   
+.error{
+    border: solid 2px red;
+    box-shadow: 3px,4px,20px,3px rgb(205, 86, 50);
+    -webkit-box-shadow:3px,4px,20px,3px rgb(205, 63, 50);
+} 
 
 .contiener{
     padding: 20px 40px;
@@ -48,11 +53,49 @@ li{
     list-style: none;    
     padding: 20px;
 }
+.xat{
+    width: 100px;
+    height: 300px;
+    background-color: inherit;
+    color: red;
+}
+.parent{
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    align-items: center;
 
+}
 ul{
     display: flex;
     flex-direction: column;
     gap: 30px;
     align-items: center;
 
+}
+
+input{
+    width: 200px;
+    height: 50px;
+    background-color: aqua;
+    color: black;
+    border-radius:12px;
+    padding: 5px 10px;
+    font-family: inherit;   
+}
+form{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
+    padding: 10px;
+}
+button{
+    width: 100px;
+    height: 40px;
+    background-color: blue;
+    color: black;
+    border-radius: 12px;
+    padding: 10px;
+    border: 5px solid green;
 }
